@@ -5,6 +5,7 @@ setGeneric("getLog", function(object, ...) standardGeneric("getLog"))
 setGeneric("mergePeptides", function(object, ...) standardGeneric("mergePeptides"))
 setGeneric("modelRt", function(object, ...) standardGeneric("modelRt"))
 setGeneric("findEMRTs", function(object, ...) standardGeneric("findEMRTs"))
+setGeneric("rescueEMRTs", function(object, ...) standardGeneric("rescueEMRTs"))
 setGeneric("searchGrid", function(object, ...) standardGeneric("searchGrid"))
 setGeneric("getGrid", function(object, ...) standardGeneric("getGrid"))
 setGeneric("getGridDetails", function(object, ...) standardGeneric("getGridDetails"))
