@@ -191,6 +191,9 @@
                         message("Filtering...")
                         .self$filterQuantMatchType() ## Quant only
                         .self$filterQuantFunction()
+                        ## must be before duplicated ids are removed and after
+                        ## Function filtering
+                        .self$QuantPep3DData$isotopicDistr <- .catIsotopeDistr(.self$QuantPep3DData)
                         .self$filterDuplicatedQuantSpectrumIds()
                         message("Computing quantitation identification statistics...")
                         .self$addQuantIdStats() ## Quant only
@@ -253,6 +256,9 @@
                         message("Filtering...")
                         .self$filterMatchType()
                         .self$filterQuantFunction()
+                        ## must be before duplicated ids are removed and after
+                        ## Function filtering
+                        .self$QuantPep3DData$isotopicDistr <- .catIsotopeDistr(.self$QuantPep3DData)
                         .self$filterDuplicatedQuantSpectrumIds()
                         message("Computing identification statistics...")
                         .self$addIdStats()
@@ -387,7 +393,7 @@
                         .self$IdentPeptideData$predictedRt <- newIdentData$predicted
                         .self$IdentPeptideData$sdRt <- newIdentData$sd
                     },
-                    findEMRTs = function(mergedEMRTs) {
+                    findEMRTs = function() {
                         if (length(.self$RtModel) == 0)
                             stop("First build a retention time model using 'modelRt'.")
                         if (length(.self$PpmError) == 0) {
@@ -409,15 +415,22 @@
                                                            .self$RtNsd,
                                                            .self$PpmError,
                                                            .self$ImDiff,
-                                                           .self$RtModel,
-                                                           mergedEMRTs)
+                                                           .self$RtModel)
                         .self$MatchedEMRTs$synapterPlgsAgreement <-
                           .findSynapterPlgsAgreement(.self$MatchedEMRTs)
                         .self$SynapterLog <- c(.self$SynapterLog,
-                                               paste("Matched identification peptides and quantitation EMRTs [",
+                                               paste0("Matched identification peptides and quantitation EMRTs [",
                                                      paste(dim(.self$MatchedEMRTs), collapse = ","),
-                                                     "] (", mergedEMRTs, ")",
-                                                     sep = ""))
+                                                     "]"))
+                    },
+                    rescueEMRTs = function(method) {
+                        .self$MatchedEMRTs <- .rescueEMRTs(.self$MatchedEMRTs,
+                                                           .self$MergedFeatures,
+                                                           method)
+                        .self$SynapterLog <- c(.self$SynapterLog,
+                                               paste0("Rescue EMRTs [",
+                                                     paste(dim(.self$MatchedEMRTs), collapse = ","),
+                                                     "] (", method, ")"))
                     },
                     fragmentMatching = function(verbose=TRUE) {
                       if (!nrow(.self$MatchedEMRTs)) {
